@@ -3,6 +3,7 @@
 *******************************************************************************
 
 === 1.0.25 ===
+* Several updates of the dspu::LoudnessMeter module.
 * Bugfixes and improvements in shared memory catalog and clients.
 * Added dspu::Bypass::process_drywet method.
 * Updated build scripts.
